@@ -33,23 +33,23 @@ class RepoFunction(commands.CobblerFunction):
         return "repo"
 
     def subcommands(self):
-        return [ "add", "edit", "copy", "rename", "remove", "list", "report" ]
+        return [ "add", "edit", "copy", "rename", "remove", "list", "report", "dumpvars" ]
 
     def add_options(self, p, args):
 
 
-        if not self.matches_args(args,["remove","report","list"]):
+        if not self.matches_args(args,["dumpvars","remove","report","list"]):
 
             p.add_option("--arch",             dest="arch",             help="overrides repo arch if required")
         if self.matches_args(args,["add"]):
             p.add_option("--clobber", dest="clobber", help="allow add to overwrite existing objects", action="store_true")
-        if not self.matches_args(args,["remove","report","list"]):
+        if not self.matches_args(args,["dumpvars","remove","report","list"]):
             p.add_option("--createrepo-flags", dest="createrepo_flags", help="additional flags for createrepo")
             p.add_option("--keep-updated",     dest="keep_updated",     help="update on each reposync, yes/no")
 
         p.add_option("--name",                 dest="name",             help="ex: 'Fedora-8-updates-i386' (REQUIRED)")
         
-        if not self.matches_args(args,["remove","report","list"]):
+        if not self.matches_args(args,["dumpvars","remove","report","list"]):
             p.add_option("--mirror",           dest="mirror",           help="source to mirror (REQUIRED)")
             p.add_option("--priority",         dest="priority",         help="set priority") 
             p.add_option("--rpm-list",         dest="rpm_list",         help="just mirror these rpms")
@@ -59,11 +59,11 @@ class RepoFunction(commands.CobblerFunction):
 
             p.add_option("--newname",          dest="newname",          help="used for copy/edit")
 
-        if not self.matches_args(args,["remove","report","list"]):
+        if not self.matches_args(args,["dumpvars","remove","report","list"]):
             p.add_option("--no-sync",     action="store_true", dest="nosync", help="suppress sync for speed")
-        if not self.matches_args(args,["report","list"]):
+        if not self.matches_args(args,["dumpvars","report","list"]):
             p.add_option("--no-triggers", action="store_true", dest="notriggers", help="suppress trigger execution")
-        if not self.matches_args(args,["remove","report","list"]):
+        if not self.matches_args(args,["dumpvars","remove","report","list"]):
             p.add_option("--owners", dest="owners", help="specify owners for authz_ownership module")
 
 
@@ -72,6 +72,8 @@ class RepoFunction(commands.CobblerFunction):
         obj = self.object_manipulator_start(self.api.new_repo,self.api.repos)
         if obj is None:
             return True
+        if self.matches_args(self.args,["dumpvars"]):
+            return self.object_manipulator_finish(obj, self.api.profiles, self.options)
 
         if self.options.arch:             obj.set_arch(self.options.arch)
         if self.options.createrepo_flags: obj.set_createrepo_flags(self.options.createrepo_flags)
