@@ -30,6 +30,7 @@ Cobbler CHANGELOG
 - kickstart templates are now evaluated dynamically
 - optional MAC registration is now built-in to requesting kickstarts
 - legacy static file generation from /var/www/cobbler removed
+- implement "cobbler ___ dumpvars --name=X" feature to show template vars
 
 - ??? - 0.8.3
 - Make createrepo get run for local cobbler reposync invocations as needed
